Try another fix for the scrollbar issue

--- a/src/gui/gtk.css
+++ b/src/gui/gtk.css
@@ -9,12 +9,3 @@ toolbar {
 .main-toolbar button {
 	padding: 6px;
 }
-
-scrollbar slider {
-	/* Size of the slider */
-	min-width: 12px;
-	min-height: 12px;
-	border-radius: 15px;
-	/* Padding around the slider */
-	border: 1px solid #606307;
-}
